--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__/
 # User Data (You might not want to upload raw text files if they are huge)
 # Uncomment the next line if you want to keep input files private
 input_passages/
+Input_texts/
